Lab_06/y.output
Terminals unused in grammar

   DOTH
   DOTC
   UPLUS
   UMINUS
   EXP
   MUL


State 90 conflicts: 13 shift/reduce
State 104 conflicts: 13 shift/reduce
State 105 conflicts: 13 shift/reduce
State 106 conflicts: 13 shift/reduce


Grammar

    0 $accept: prm $end

    1 prm: HEADERS MAIN_TYPE MAIN LB RB BLOCK

    2 MAIN_TYPE: INT

    3 HEADERS: HEADER HEADERS
    4        | HEADER

    5 HEADER: HASH INCLUDE LT HEADER_FILE GT
    6       | HASH INCLUDE DOUBLEQ HEADER2 HEADER_FILE DOUBLEQ

    7 HEADER2: HEADER2 VAR DIV
    8        | DIV
    9        | %empty

   10 BLOCK: LCB BODY RCB

   11 BODY: STATEMENTS

   12 STATEMENTS: STATEMENT STATEMENTS
   13           | STATEMENT

   14 STATEMENT: BLOCK
   15          | IF LB EXPRESSION RB BLOCK ELSE BLOCK
   16          | IF LB EXPRESSION RB BLOCK
   17          | WHILE LB EXPRESSION RB BLOCK
   18          | DO LCB BLOCK RCB WHILE LB EXPRESSION RB SC
   19          | LB EXPRESSION RB QUESM BLOCK COLON BLOCK SC
   20          | FOR LB ASSIGNMENT SC EXPRESSION SC ASSIGNMENT RB BLOCK
   21          | ASSIGNMENT SC
   22          | DECLARATION_STATEMENT SC
   23          | COMMENT
   24          | SC

   25 ASSIGNMENT: VAR EQ EXPRESSION
   26           | VAR DIMENSION_SEQUENCE EQ EXPRESSION
   27           | STAR_SEQUENCE EXPRESSION EQ EXPRESSION

   28 EXPRESSION: AMPERSAND EXPRESSION
   29           | NOT EXPRESSION
   30           | EXPRESSION BINOP EXPRESSION
   31           | EXPRESSION RELOP EXPRESSION
   32           | EXPRESSION LOGOP EXPRESSION
   33           | STAR_SEQUENCE EXPRESSION
   34           | VAR DIMENSION_SEQUENCE
   35           | VAR
   36           | LB EXPRESSION RB
   37           | NUMINT

   38 DIMENSION_SEQUENCE: LSB NUMINT RSB DIMENSION_SEQUENCE
   39                   | LSB VAR RSB DIMENSION_SEQUENCE
   40                   | LSB VAR RSB
   41                   | LSB NUMINT RSB

   42 STAR_SEQUENCE: STAR STAR_SEQUENCE
   43              | STAR

   44 BINOP: PLUS
   45      | MINUS
   46      | STAR
   47      | DIV
   48      | MOD

   49 RELOP: EQCOMPARE
   50      | NEQCOMPARE
   51      | LTE
   52      | LT
   53      | GTE
   54      | GT

   55 LOGOP: AND
   56      | OR

   57 DECLARATION_STATEMENT: DATA_TYPE VAR_LIST

   58 $@1: %empty

   59 VAR_LIST: POINTER_SEQUENCE VAR DECLARATION_SEQUENCE $@1 COMMA VAR_LIST
   60         | POINTER_SEQUENCE VAR DECLARATION_SEQUENCE

   61 $@2: %empty

   62 VAR_LIST: POINTER_SEQUENCE VAR $@2 COMMA VAR_LIST
   63         | POINTER_SEQUENCE VAR

   64 DECLARATION_SEQUENCE: LSB NUMINT RSB DECLARATION_SEQUENCE
   65                     | LSB NUMINT RSB

   66 POINTER_SEQUENCE: STAR POINTER_SEQUENCE
   67                 | %empty

   68 DATA_TYPE: INT
   69          | CHAR
   70          | FLOAT
   71          | DOUBLE


Terminals, with rules where they appear

$end (0) 0
error (256)
INCLUDE (258) 5 6
HEADER_FILE (259) 5 6
MAIN (260) 1
DOTH (261)
DOTC (262)
HASH (263) 5 6
DOUBLEQ (264) 6
LB (265) 1 15 16 17 18 19 20 36
RB (266) 1 15 16 17 18 19 20 36
LCB (267) 10 18
RCB (268) 10 18
LSB (269) 38 39 40 41 64 65
RSB (270) 38 39 40 41 64 65
COMMA (271) 59 62
SC (272) 18 19 20 21 22 24
UPLUS (273)
UMINUS (274)
EXP (275)
QUESM (276) 19
COLON (277) 19
STAR (278) 42 43 46 66
AMPERSAND (279) 28
PLUS (280) 44
MINUS (281) 45
MOD (282) 48
MUL (283)
DIV (284) 7 8 47
EQCOMPARE (285) 49
NEQCOMPARE (286) 50
EQ (287) 25 26 27
GTE (288) 53
LTE (289) 51
GT (290) 5 54
LT (291) 5 52
NOT (292) 29
AND (293) 55
OR (294) 56
IF (295) 15 16
ELSE (296) 15
FOR (297) 20
DO (298) 18
WHILE (299) 17 18
VAR (300) 7 25 26 34 35 39 40 59 60 62 63
NUMINT (301) 37 38 41 64 65
COMMENT (302) 23
INT (303) 2 68
CHAR (304) 69
FLOAT (305) 70
DOUBLE (306) 71


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
prm (53)
    on left: 1, on right: 0
MAIN_TYPE (54)
    on left: 2, on right: 1
HEADERS (55)
    on left: 3 4, on right: 1 3
HEADER (56)
    on left: 5 6, on right: 3 4
HEADER2 (57)
    on left: 7 8 9, on right: 6 7
BLOCK (58)
    on left: 10, on right: 1 14 15 16 17 18 19 20
BODY (59)
    on left: 11, on right: 10
STATEMENTS (60)
    on left: 12 13, on right: 11 12
STATEMENT (61)
    on left: 14 15 16 17 18 19 20 21 22 23 24, on right: 12 13
ASSIGNMENT (62)
    on left: 25 26 27, on right: 20 21
EXPRESSION (63)
    on left: 28 29 30 31 32 33 34 35 36 37, on right: 15 16 17 18 19
    20 25 26 27 28 29 30 31 32 33 36
DIMENSION_SEQUENCE (64)
    on left: 38 39 40 41, on right: 26 34 38 39
STAR_SEQUENCE (65)
    on left: 42 43, on right: 27 33 42
BINOP (66)
    on left: 44 45 46 47 48, on right: 30
RELOP (67)
    on left: 49 50 51 52 53 54, on right: 31
LOGOP (68)
    on left: 55 56, on right: 32
DECLARATION_STATEMENT (69)
    on left: 57, on right: 22
VAR_LIST (70)
    on left: 59 60 62 63, on right: 57 59 62
$@1 (71)
    on left: 58, on right: 59
$@2 (72)
    on left: 61, on right: 62
DECLARATION_SEQUENCE (73)
    on left: 64 65, on right: 59 60 64
POINTER_SEQUENCE (74)
    on left: 66 67, on right: 59 60 62 63 66
DATA_TYPE (75)
    on left: 68 69 70 71, on right: 57


State 0

    0 $accept: . prm $end

    HASH  shift, and go to state 1

    prm      go to state 2
    HEADERS  go to state 3
    HEADER   go to state 4


State 1

    5 HEADER: HASH . INCLUDE LT HEADER_FILE GT
    6       | HASH . INCLUDE DOUBLEQ HEADER2 HEADER_FILE DOUBLEQ

    INCLUDE  shift, and go to state 5


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 6


State 3

    1 prm: HEADERS . MAIN_TYPE MAIN LB RB BLOCK

    INT  shift, and go to state 7

    MAIN_TYPE  go to state 8


State 4

    3 HEADERS: HEADER . HEADERS
    4        | HEADER .

    HASH  shift, and go to state 1

    $default  reduce using rule 4 (HEADERS)

    HEADERS  go to state 9
    HEADER   go to state 4


State 5

    5 HEADER: HASH INCLUDE . LT HEADER_FILE GT
    6       | HASH INCLUDE . DOUBLEQ HEADER2 HEADER_FILE DOUBLEQ

    DOUBLEQ  shift, and go to state 10
    LT       shift, and go to state 11


State 6

    0 $accept: prm $end .

    $default  accept


State 7

    2 MAIN_TYPE: INT .

    $default  reduce using rule 2 (MAIN_TYPE)


State 8

    1 prm: HEADERS MAIN_TYPE . MAIN LB RB BLOCK

    MAIN  shift, and go to state 12


State 9

    3 HEADERS: HEADER HEADERS .

    $default  reduce using rule 3 (HEADERS)


State 10

    6 HEADER: HASH INCLUDE DOUBLEQ . HEADER2 HEADER_FILE DOUBLEQ

    DIV  shift, and go to state 13

    $default  reduce using rule 9 (HEADER2)

    HEADER2  go to state 14


State 11

    5 HEADER: HASH INCLUDE LT . HEADER_FILE GT

    HEADER_FILE  shift, and go to state 15


State 12

    1 prm: HEADERS MAIN_TYPE MAIN . LB RB BLOCK

    LB  shift, and go to state 16


State 13

    8 HEADER2: DIV .

    $default  reduce using rule 8 (HEADER2)


State 14

    6 HEADER: HASH INCLUDE DOUBLEQ HEADER2 . HEADER_FILE DOUBLEQ
    7 HEADER2: HEADER2 . VAR DIV

    HEADER_FILE  shift, and go to state 17
    VAR          shift, and go to state 18


State 15

    5 HEADER: HASH INCLUDE LT HEADER_FILE . GT

    GT  shift, and go to state 19


State 16

    1 prm: HEADERS MAIN_TYPE MAIN LB . RB BLOCK

    RB  shift, and go to state 20


State 17

    6 HEADER: HASH INCLUDE DOUBLEQ HEADER2 HEADER_FILE . DOUBLEQ

    DOUBLEQ  shift, and go to state 21


State 18

    7 HEADER2: HEADER2 VAR . DIV

    DIV  shift, and go to state 22


State 19

    5 HEADER: HASH INCLUDE LT HEADER_FILE GT .

    $default  reduce using rule 5 (HEADER)


State 20

    1 prm: HEADERS MAIN_TYPE MAIN LB RB . BLOCK

    LCB  shift, and go to state 23

    BLOCK  go to state 24


State 21

    6 HEADER: HASH INCLUDE DOUBLEQ HEADER2 HEADER_FILE DOUBLEQ .

    $default  reduce using rule 6 (HEADER)


State 22

    7 HEADER2: HEADER2 VAR DIV .

    $default  reduce using rule 7 (HEADER2)


State 23

   10 BLOCK: LCB . BODY RCB

    LB       shift, and go to state 25
    LCB      shift, and go to state 23
    SC       shift, and go to state 26
    STAR     shift, and go to state 27
    IF       shift, and go to state 28
    FOR      shift, and go to state 29
    DO       shift, and go to state 30
    WHILE    shift, and go to state 31
    VAR      shift, and go to state 32
    COMMENT  shift, and go to state 33
    INT      shift, and go to state 34
    CHAR     shift, and go to state 35
    FLOAT    shift, and go to state 36
    DOUBLE   shift, and go to state 37

    BLOCK                  go to state 38
    BODY                   go to state 39
    STATEMENTS             go to state 40
    STATEMENT              go to state 41
    ASSIGNMENT             go to state 42
    STAR_SEQUENCE          go to state 43
    DECLARATION_STATEMENT  go to state 44
    DATA_TYPE              go to state 45


State 24

    1 prm: HEADERS MAIN_TYPE MAIN LB RB BLOCK .

    $default  reduce using rule 1 (prm)


State 25

   19 STATEMENT: LB . EXPRESSION RB QUESM BLOCK COLON BLOCK SC

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 51
    STAR_SEQUENCE  go to state 52


State 26

   24 STATEMENT: SC .

    $default  reduce using rule 24 (STATEMENT)


State 27

   42 STAR_SEQUENCE: STAR . STAR_SEQUENCE
   43              | STAR .

    STAR  shift, and go to state 27

    $default  reduce using rule 43 (STAR_SEQUENCE)

    STAR_SEQUENCE  go to state 53


State 28

   15 STATEMENT: IF . LB EXPRESSION RB BLOCK ELSE BLOCK
   16          | IF . LB EXPRESSION RB BLOCK

    LB  shift, and go to state 54


State 29

   20 STATEMENT: FOR . LB ASSIGNMENT SC EXPRESSION SC ASSIGNMENT RB BLOCK

    LB  shift, and go to state 55


State 30

   18 STATEMENT: DO . LCB BLOCK RCB WHILE LB EXPRESSION RB SC

    LCB  shift, and go to state 56


State 31

   17 STATEMENT: WHILE . LB EXPRESSION RB BLOCK

    LB  shift, and go to state 57


State 32

   25 ASSIGNMENT: VAR . EQ EXPRESSION
   26           | VAR . DIMENSION_SEQUENCE EQ EXPRESSION

    LSB  shift, and go to state 58
    EQ   shift, and go to state 59

    DIMENSION_SEQUENCE  go to state 60


State 33

   23 STATEMENT: COMMENT .

    $default  reduce using rule 23 (STATEMENT)


State 34

   68 DATA_TYPE: INT .

    $default  reduce using rule 68 (DATA_TYPE)


State 35

   69 DATA_TYPE: CHAR .

    $default  reduce using rule 69 (DATA_TYPE)


State 36

   70 DATA_TYPE: FLOAT .

    $default  reduce using rule 70 (DATA_TYPE)


State 37

   71 DATA_TYPE: DOUBLE .

    $default  reduce using rule 71 (DATA_TYPE)


State 38

   14 STATEMENT: BLOCK .

    $default  reduce using rule 14 (STATEMENT)


State 39

   10 BLOCK: LCB BODY . RCB

    RCB  shift, and go to state 61


State 40

   11 BODY: STATEMENTS .

    $default  reduce using rule 11 (BODY)


State 41

   12 STATEMENTS: STATEMENT . STATEMENTS
   13           | STATEMENT .

    LB       shift, and go to state 25
    LCB      shift, and go to state 23
    SC       shift, and go to state 26
    STAR     shift, and go to state 27
    IF       shift, and go to state 28
    FOR      shift, and go to state 29
    DO       shift, and go to state 30
    WHILE    shift, and go to state 31
    VAR      shift, and go to state 32
    COMMENT  shift, and go to state 33
    INT      shift, and go to state 34
    CHAR     shift, and go to state 35
    FLOAT    shift, and go to state 36
    DOUBLE   shift, and go to state 37

    $default  reduce using rule 13 (STATEMENTS)

    BLOCK                  go to state 38
    STATEMENTS             go to state 62
    STATEMENT              go to state 41
    ASSIGNMENT             go to state 42
    STAR_SEQUENCE          go to state 43
    DECLARATION_STATEMENT  go to state 44
    DATA_TYPE              go to state 45


State 42

   21 STATEMENT: ASSIGNMENT . SC

    SC  shift, and go to state 63


State 43

   27 ASSIGNMENT: STAR_SEQUENCE . EXPRESSION EQ EXPRESSION

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 64
    STAR_SEQUENCE  go to state 52


State 44

   22 STATEMENT: DECLARATION_STATEMENT . SC

    SC  shift, and go to state 65


State 45

   57 DECLARATION_STATEMENT: DATA_TYPE . VAR_LIST

    STAR  shift, and go to state 66

    $default  reduce using rule 67 (POINTER_SEQUENCE)

    VAR_LIST          go to state 67
    POINTER_SEQUENCE  go to state 68


State 46

   36 EXPRESSION: LB . EXPRESSION RB

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 69
    STAR_SEQUENCE  go to state 52


State 47

   28 EXPRESSION: AMPERSAND . EXPRESSION

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 70
    STAR_SEQUENCE  go to state 52


State 48

   29 EXPRESSION: NOT . EXPRESSION

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 71
    STAR_SEQUENCE  go to state 52


State 49

   34 EXPRESSION: VAR . DIMENSION_SEQUENCE
   35           | VAR .

    LSB  shift, and go to state 58

    $default  reduce using rule 35 (EXPRESSION)

    DIMENSION_SEQUENCE  go to state 72


State 50

   37 EXPRESSION: NUMINT .

    $default  reduce using rule 37 (EXPRESSION)


State 51

   19 STATEMENT: LB EXPRESSION . RB QUESM BLOCK COLON BLOCK SC
   30 EXPRESSION: EXPRESSION . BINOP EXPRESSION
   31           | EXPRESSION . RELOP EXPRESSION
   32           | EXPRESSION . LOGOP EXPRESSION

    RB          shift, and go to state 73
    STAR        shift, and go to state 74
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    MOD         shift, and go to state 77
    DIV         shift, and go to state 78
    EQCOMPARE   shift, and go to state 79
    NEQCOMPARE  shift, and go to state 80
    GTE         shift, and go to state 81
    LTE         shift, and go to state 82
    GT          shift, and go to state 83
    LT          shift, and go to state 84
    AND         shift, and go to state 85
    OR          shift, and go to state 86

    BINOP  go to state 87
    RELOP  go to state 88
    LOGOP  go to state 89


State 52

   33 EXPRESSION: STAR_SEQUENCE . EXPRESSION

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 90
    STAR_SEQUENCE  go to state 52


State 53

   42 STAR_SEQUENCE: STAR STAR_SEQUENCE .

    $default  reduce using rule 42 (STAR_SEQUENCE)


State 54

   15 STATEMENT: IF LB . EXPRESSION RB BLOCK ELSE BLOCK
   16          | IF LB . EXPRESSION RB BLOCK

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 91
    STAR_SEQUENCE  go to state 52


State 55

   20 STATEMENT: FOR LB . ASSIGNMENT SC EXPRESSION SC ASSIGNMENT RB BLOCK

    STAR  shift, and go to state 27
    VAR   shift, and go to state 32

    ASSIGNMENT     go to state 92
    STAR_SEQUENCE  go to state 43


State 56

   18 STATEMENT: DO LCB . BLOCK RCB WHILE LB EXPRESSION RB SC

    LCB  shift, and go to state 23

    BLOCK  go to state 93


State 57

   17 STATEMENT: WHILE LB . EXPRESSION RB BLOCK

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 94
    STAR_SEQUENCE  go to state 52


State 58

   38 DIMENSION_SEQUENCE: LSB . NUMINT RSB DIMENSION_SEQUENCE
   39                   | LSB . VAR RSB DIMENSION_SEQUENCE
   40                   | LSB . VAR RSB
   41                   | LSB . NUMINT RSB

    VAR     shift, and go to state 95
    NUMINT  shift, and go to state 96


State 59

   25 ASSIGNMENT: VAR EQ . EXPRESSION

    LB         shift, and go to state 46
    STAR       shift, and go to state 27
    AMPERSAND  shift, and go to state 47
    NOT        shift, and go to state 48
    VAR        shift, and go to state 49
    NUMINT     shift, and go to state 50

    EXPRESSION     go to state 97
    STAR_SEQUENCE  go to state 52


State 60

   26 ASSIGNMENT: VAR DIMENSION_SEQUENCE . EQ EXPRESSION

    EQ  shift, and go to state 98


State 61

   10 BLOCK: LCB BODY RCB .

    $default  reduce using rule 10 (BLOCK)


State 62

   12 STATEMENTS: STATEMENT STATEMENTS .

    $default  reduce using rule 12 (STATEMENTS)


State 63

   21 STATEMENT: ASSIGNMENT SC .

    $default  reduce using rule 21 (STATEMENT)


State 64

   27 ASSIGNMENT: STAR_SEQUENCE EXPRESSION . EQ EXPRESSION
   30 EXPRESSION: EXPRESSION . BINOP EXPRESSION
   31           | EXPRESSION . RELOP EXPRESSION
   32           | EXPRESSION . LOGOP EXPRESSION

    STAR        shift, and go to state 74
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    MOD         shift, and go to state 77
    DIV         shift, and go to state 78
    EQCOMPARE   shift, and go to state 79
    NEQCOMPARE  shift, and go to state 80
    EQ          shift, and go to state 99
    GTE         shift, and go to state 81
    LTE         shift, and go to state 82
    GT          shift, and go to state 83
    LT          shift, and go to state 84
    AND         shift, and go to state 85
    OR          shift, and go to state 86

    BINOP  go to state 87
    RELOP  go to state 88
    LOGOP  go to state 89


State 65

   22 STATEMENT: DECLARATION_STATEMENT SC .

    $default  reduce using rule 22 (STATEMENT)


State 66

   66 POINTER_SEQUENCE: STAR . POINTER_SEQUENCE

    STAR  shift, and go to state 66

    $default  reduce using rule 67 (POINTER_SEQUENCE)

    POINTER_SEQUENCE  go to state 100


State 67

   57 DECLARATION_STATEMENT: DATA_TYPE VAR_LIST .

    $default  reduce using rule 57 (DECLARATION_STATEMENT)


State 68

   59 VAR_LIST: POINTER_SEQUENCE . VAR DECLARATION_SEQUENCE $@1 COMMA VAR_LIST
   60         | POINTER_SEQUENCE . VAR DECLARATION_SEQUENCE
   62         | POINTER_SEQUENCE . VAR $@2 COMMA VAR_LIST
   63         | POINTER_SEQUENCE . VAR

    VAR  shift, and go to state 101


State 69

   30 EXPRESSION: EXPRESSION . BINOP EXPRESSION
   31           | EXPRESSION . RELOP EXPRESSION
   32           | EXPRESSION . LOGOP EXPRESSION
   36           | LB EXPRESSION . RB

    RB          shift, and go to state 102
    STAR        shift, and go to state 74
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    MOD         shift, and go to state 77
    DIV         shift, and go to state 78
    EQCOMPARE   shift, and go to state 79
    NEQCOMPARE  shift, and go to state 80
    GTE         shift, and go to state 81
    LTE         shift, and go to state 82
    GT          shift, and go to state 83
    LT          shift, and go to state 84
    AND         shift, and go to state 85
    OR          shift, and go to state 86

    BINOP  go to state 87
    RELOP  go to state 88
    LOGOP  go to state 89


State 70
